--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper scissors</title>
-    <script src="javascript.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div id="buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button> 
+        <button id="scissors">Scissors</button>
+    </div>
 </body>
 </html>
