--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <h1 id="playerText">Player: </h1>
+    <h1 id="computerText">Computer: </h1>
+    <h1 id="resultText">Result: </h1>
+    <h1 id="finalResultText">Final result: </h1>
     <div id="buttons">
         <button id="rock">Rock</button>
         <button id="paper">Paper</button> 
