Add score and results headers

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1 id="playerText">Player: </h1>
     <h1 id="computerText">Computer: </h1>
     <h1 id="resultText">Result: </h1>
+    <h1 id="scoreTextPlayer">Player Score: </h1>
+    <h1 id="scoreTextComputer">Computer Score: </h1>
     <h1 id="finalResultText">Final result: </h1>
     <div id="buttons">
         <button id="rock">Rock</button>
