--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper scissors</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" src="styles.css">
+    <title>Rock Paper scissors</title>
 </head>
 <body>
+    <h1 id="game">Rock Paper Scissors</h1>
     <h1 id="playerText">Player: </h1>
     <h1 id="computerText">Computer: </h1>
     <h1 id="resultText">Result: </h1>
     <h1 id="scoreTextPlayer">Player Score: </h1>
     <h1 id="scoreTextComputer">Computer Score: </h1>
-    <h1 id="finalResultText">Final result: </h1>
+    <h1 id="finalResultText">Who will win?</h1>
     <div id="buttons">
         <button id="rock">Rock</button>
         <button id="paper">Paper</button> 
