--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
-    <link rel="stylesheet" src="styles.css">
     <title>Rock Paper scissors</title>
 </head>
 <body>
-    <h1 id="game">Rock Paper Scissors</h1>
+    <h1>Rock Paper Scissors</h1>
     <h1 id="playerText">Player: </h1>
     <h1 id="computerText">Computer: </h1>
     <h1 id="resultText">Result: </h1>
@@ -19,6 +18,7 @@
         <button id="rock">Rock</button>
         <button id="paper">Paper</button> 
         <button id="scissors">Scissors</button>
+        <button id="play-again">Play again</button>
     </div>
 </body>
 </html>
